--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,16 +23,8 @@
             android:name=".activite"
             android:exported="false" />
         <activity
-            android:name=".Activite"
-            android:exported="false" />
-        <activity
             android:name=".Dev_Info"
             android:exported="false" />
-        <activity
-            android:name=".Dev_inf"
-            android:exported="false"
-            android:label="@string/title_activity_dev_inf"
-            android:theme="@style/Theme.Entrainement_OBL" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
